# qnetload

./: .gitignore  CMakeLists.txt  README.md  formatnumber.cpp  formatnumber.h  informationstorage.cpp  informationstorage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkinformation.cpp  networkinformation.h  networkinformationreader.cpp  networkinformationreader.h  plot.cpp  plot.h  qnetload.pro
.github/workflows/: ci.yml
src/: CMakeLists.txt  clickablelabel.cpp  clickablelabel.h  formatnumber.cpp  formatnumber.h  informationstorage.cpp  informationstorage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkinformationreader.cpp  networkinformationreader.h  plot.cpp  plot.h  resources.qrc  utils.cpp  utils.h
src/manual/: qnetload.1
src/tests/: CMakeLists.txt  testformatnumber.cpp  testformatnumber.h  testinformationstorage.cpp  testinformationstorage.h  testnetworkinformation.cpp  testnetworkinformation.h  testnetworkinformationreader.cpp  testnetworkinformationreader.h
src/tests/proc_net_dev_files/: README.txt  example01.txt
tests/: testnetworkinformation.cpp  testnetworkinformation.h
